Make modal links container relative and gives them an increased z-index to avoid interference with other screen items on click

--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -74,6 +74,8 @@
   z-index: 1000;
 
   .expandedLinks {
+    position: relative;
+    z-index: 50;
     .expandedLink {
       color: #eee;
       margin-right: 10px;
